--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "chalk": "^2.4.1",
+    "minimist": "^1.2.0",
     "webpack": "^4.2.0"
   }
 }
